# xbmc

./: .clang-format  .clang-tidy  .codedocs  .cproject  .cvsignore  .dummy.am  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .kodiai.yml  .mcp.json  .mention-bot  .project  .travis.yml  4RKH4N  ADDON_BUILD_COMPREHENSIVE_SOLUTION.md  ADDON_BUILD_ERRORS_ANALYSIS.md  ADDON_BUILD_ORCHESTRATOR_REPORT.md  ADDON_BUILD_RESEARCH_AGENT.md  ADDON_NOTES.md  ATM-Mini Project.cpp  AUTHORS  Build.Debug.bat  Build.LTCG.bat  Build.bat  BuildAndroid.sh  CLAUDE.md  CMakeConfig.txt  CMakeFunctions.txt  CMakeLists.txt  CODING_GUIDELINES.dox  CONTRIBUTING.md  CONTRIBUTORS  COPYING  ChangeLog  Changelog.txt  CmakeBuildDepOptions.cmake  ConfigureAndroidDebug.sh  (+141 more)
XBMC/: .cproject  Build.bat  CMakeLists.common  CMakeLists.txt  CPortAudio.h  Changelog.txt  LICENSE.GPL  MS_Extender_Remote_keymap.rar  Makefile  Makefile.am  Makefile.in  Makefile.include  Makefile.include.in  README.armel  README.linux  README.osx  README.ubuntu  TODO.pvr  XBMC.kdevelop  XBMC.kdevelop.filelist  aclocal.m4  autogen.sh  bootstrap  build.sh  config.guess  config.h.cmake  config.h.in  config.sub  configure  configure.in  copying.txt  demo-asoundrc  keymapping.txt  known_issues.txt  make-build.sh  xbmc-precommit.diff  xbmc-xrandr.c  xbmc.sln  xbmc.vcproj
XBMC/Debug/: .cvsignore
XBMC/Release/: .cvsignore
XBMC/XBMC.xcodeproj/: project.pbxproj
XBMC/addons/: DllAddonSettings.h  DllAddonTypes.h  PVRClientTypes.h  ScreensaverTypes.h  VisualisationTypes.h  addon.h  xbmc_addon.h  xbmc_pvr.h  xbmc_pvr_types.h  xbmc_scr.h  xbmc_scr_dll.h  xbmc_scr_types.h  xbmc_vis.h  xbmc_vis_types.h
XBMC/credits/: credits-font20.xpr  credits.mod
XBMC/guilib/: ActionManager.cpp  ActionManager.h  AnimatedGif.cpp  AnimatedGif.h  AudioContext.cpp  AudioContext.h  CMakeLists.txt  DirectXGraphics.cpp  DirectXGraphics.h  FrameBufferObject.cpp  FrameBufferObject.h  GUIActionDescriptor.h  GUIAudioManager.cpp  GUIAudioManager.h  GUIBaseContainer.cpp  GUIBaseContainer.h  GUIBorderedImage.cpp  GUIBorderedImage.h  GUIButtonControl.cpp  GUIButtonControl.h  GUIButtonScroller.cpp  GUIButtonScroller.h  GUICallback.h  GUICheckMarkControl.cpp  GUICheckMarkControl.h  GUIColorManager.cpp  GUIColorManager.h  GUIConsoleControl.cpp  GUIControl.cpp  GUIControl.h  GUIControlFactory.cpp  GUIControlFactory.h  GUIControlGroup.cpp  GUIControlGroup.h  GUIControlGroupList.cpp  GUIControlGroupList.h  GUIControlProfiler.cpp  GUIDialog.cpp  GUIDialog.h  GUIEPGGridContainer.cpp  (+189 more)
XBMC/pvrclients/: PVRClientTypes.h  xbmc_pvr.h
XBMC/screensavers/: AsterWave.xml  Asteroids.xbs  BioGenesis.xml  Drempels.xbs  GreyNetic.xbs  GreyNetic.xml  MatrixTrails.tga  MatrixTrails.xbs  PingPong.xbs  Planestate.xbs  Planestate.xml  Plasma.xbs  Pyro.xbs  ShadeWorm.xml  pmBlobs.xml  pmblobs_credits.txt
XBMC/scripts/: customdialog.py  dialogbrowse.py  dialogselect.py  dialogyesno.py  download apleasure_zip.py  guibuilder.py  links-lyrics.py  links-wikipedia.py  makedoc.py  playmusic.py  rss.py  scripts.rar  user_submitted.rar  windowexample.py
XBMC/system/: FileZilla Server.xml  Keymap.xml  Lircmap.xml  playercorefactory.xml  voicemasks.xml
XBMC/userdata/: Keymap.xml  Lircmap.xml  PartyMode.xml  RssFeeds.xml  addons.xml  sources.xml
XBMC/visualisations/: Boxalizer.vis  Goom.vis  MilkDrop.vis  ProjectM.vis  ProjectM_win32.vis  Saville.vis  Spectrum.vis  fountain.vis  (+4 more)
kodi-audiodsp-vsthost/: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt  DllASAP.h  DllAc3codec.h  DllAdpcm.h  DllAvCodec.h  DllAvCore.h  DllAvFilter.h  DllAvFormat.h  DllAvUtil.h  DllDCACodec.h  DllLibArchive.h  DllLibFlac.h  DllLibbluray.h  DllModplug.h  DllNosefart.h  DllPostProc.h  DllSidplay2.h  DllStSound.h  DllSwResample.h  DllSwScale.h  DllTimidity.h  DllVGMStream.h  DllVorbisfile.h  DllWAVPack.h  Makefile.in
plex/: BundleUtilitiesPlex.cmake  CMakeCompleteBundle.cmake.in  CMakeLists.txt  CMakeResources.cmake  CocoaUtils.cpp  CocoaUtils.h  CocoaUtils.m  CocoaUtilsPlus.cpp  CocoaUtilsPlus.h  CocoaUtilsPlus.mm  Credits.html  Files to Rebase.txt  LaunchHost.cpp  ManualServerScanner.h  MediaCenterLaunchHost.cpp  MyPlexManager.h  PLEX-README.txt  Plex.icns  PlexAnalytics.cpp  PlexAnalytics.h  PlexApplication.cpp  PlexApplication.h  PlexApplicationWin.cpp  PlexApplicationWin.h  PlexAsyncUrlResolver.h  PlexContentPlayerMixin.cpp  PlexContentPlayerMixin.h  PlexContentWorker.cpp  PlexContentWorker.h  PlexLibrarySectionManager.h  PlexLog.h  PlexMacUtils.h  PlexMacUtils.mm  PlexMediaDecisionEngine.cpp  PlexMediaDecisionEngine.h  PlexMediaPart.h  PlexMediaRefresher.h  PlexMediaServerQueue.cpp  PlexMediaServerQueue.h  PlexMediaStream.h  (+18 more)
src/: AppInfo.cpp  AppInfo.h  ApplicationMessenger.cpp  ApplicationMessenger.h  Autorun.h  BackgroundInfoLoader.cpp  CMakeLists.txt  CueDocument.cpp  DatabaseManager.cpp  DbUrl.cpp  DbUrl.h  Dir.cpp  Dir.h  DirIterator.cpp  DirIterator.h  DynamicDll.cpp  FileItem.cpp  FileOps.cpp  FileOps.h  FileUtils.cpp  FileUtils.h  GUIInfoManager.cpp  Log.cpp  Log.h  MacBundle.cpp  MacBundle.h  Platform.h  PlayListPlayer.cpp  PlayListPlayer.h  ProcessUtils.cpp  ProcessUtils.h  SectionLoader.h  StandardDirs.cpp  StandardDirs.h  StandardDirs.mm  StlSymbolsLeopard.cpp  StringUtils.h  TextureCacheJob.cpp  TextureDatabase.cpp  ThumbLoader.cpp  (+30 more)
xbmc/: --PictureDatabase.h  APEv2Tag.cpp  APEv2Tag.h  AddonDatabase.cpp  AddonDatabase.h  AdvancedSettings.cpp  AdvancedSettings.h  Album.cpp  Album.h  AppEnvironment.cpp  AppEnvironment.h  AppInboundProtocol.cpp  AppInboundProtocol.h  AppParamParser.cpp  AppParamParser.h  AppParams.cpp  AppParams.h  Application.cpp  Application.h  ApplicationMessenger.cpp  ApplicationMessenger.h  ApplicationPlayer.cpp  ApplicationPlayer.h  ApplicationRenderer.cpp  ApplicationRenderer.h  ApplicationStackHelper.cpp  ApplicationStackHelper.h  ArenaItem.cpp  ArenaItem.h  Artist.cpp  Artist.h  AutoPtrHandle.cpp  AutoPtrHandle.h  AutoSwitch.cpp  AutoSwitch.h  Autorun.cpp  Autorun.h  AutorunMediaJob.cpp  AutorunMediaJob.h  BackgroundInfoLoader.cpp  (+653 more)
(+59627 files in other folders)
